--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "next": "^16.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-icons": "^5.5.0",
-    "yet-another-react-lightbox": "^3.27.0"
+    "react-icons": "^5.5.0"
   }
 }
